--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "lodash": "^4.17.10",
-    "mongoose": "^5.2.4"
+    "mongoose": "^5.2.4",
+    "source": "0.0.3"
   }
 }
